appel de exactMatch dans service auth

--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/templates.cfg
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/templates.cfg
@@ -26,6 +26,7 @@
 #typings.d.ts					; typings.d.ts					;  ${SRC}        				; src/typings_d_ts.vm         				; 1
 #environment.prod.ts				; environment.prod.ts			;  ${SRC}/environments       	; src/environments/environment_prod_ts.vm   ; 1
 #environment.ts					; environment.ts				;  ${SRC}/environments       	; src/environments/environment_ts.vm        ; 1
+test_jdbctool.ts					; test_jdbctool.ts				;  ${SRC}       	; src/test_jdbctool.vm        ; 1
 
 # View Angular
 #index.html         				; index.html          		; ${SRC}        				; src/index_html.vm         				; 1
