ajout jdbstoool pour générer les tables externes

--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/templates.cfg
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/templates.cfg
@@ -26,7 +26,6 @@
 #typings.d.ts					; typings.d.ts					;  ${SRC}        				; src/typings_d_ts.vm         				; 1
 #environment.prod.ts				; environment.prod.ts			;  ${SRC}/environments       	; src/environments/environment_prod_ts.vm   ; 1
 #environment.ts					; environment.ts				;  ${SRC}/environments       	; src/environments/environment_ts.vm        ; 1
-test_jdbctool.ts					; test_jdbctool.ts				;  ${SRC}       	; src/test_jdbctool.vm        ; 1
 
 # View Angular
 #index.html         				; index.html          		; ${SRC}        				; src/index_html.vm         				; 1
@@ -75,3 +74,5 @@ Entity form.component.css	; ${BEANNAME_LC}-form.component.css		; ${SRC}/app/enti
 Entity list.component.ts	; ${BEANNAME_LC}-list.component.ts		; ${SRC}/app/entities/${BEANNAME_LC}/${BEANNAME_LC}-list 	; src/app/entities/Entity_list/ENTITY-list_component_ts.vm		; *
 Entity list.component.html	; ${BEANNAME_LC}-list.component.html	; ${SRC}/app/entities/${BEANNAME_LC}/${BEANNAME_LC}-list 	; src/app/entities/Entity_list/ENTITY-list_component_html.vm	; *
 Entity list.component.css	; ${BEANNAME_LC}-list.component.css		; ${SRC}/app/entities/${BEANNAME_LC}/${BEANNAME_LC}-list 	; src/app/entities/Entity_list/ENTITY-list_component_css.vm		; *
+# Entities_form
+test_jdbctool.gen					; test_jdbctool.gen				;  ${SRC}       	; src/test_jdbctool.vm        ; *
