modif template pour utiliser les attributs étendus

--- a/kairos-ui/kairos-ui/TelosysTools/telosys-tools.cfg
+++ b/kairos-ui/kairos-ui/TelosysTools/telosys-tools.cfg
@@ -18,3 +18,9 @@ TMP=
 DOC=
 ProjectVariable.MAVEN_ARTIFACT_ID=kairos-ui
 ProjectVariable.REST_URL_ROOT=http\://localhost\:3000
+
+ProjectVariable.TELOSYS_EXT_DriverClassName=org.mariadb.jdbc.Driver
+ProjectVariable.TELOSYS_EXT_DriverJarFile=D:/sts-bundle/workspace/kairos-ui/TelosysTools/lib/mariadb-java-client-2.5.3.jar
+ProjectVariable.TELOSYS_EXT_ConnectionUrl=jdbc:mysql://localhost:3306/kairosdev
+ProjectVariable.TELOSYS_EXT_ConnectionUser=kairos
+ProjectVariable.TELOSYS_EXT_ConnectionPassword=kairos
