génération vi telosys_ext ok - problèmes d'accents

--- a/kairos-ui/kairos-ui/TelosysTools/telosys-tools.cfg
+++ b/kairos-ui/kairos-ui/TelosysTools/telosys-tools.cfg
@@ -1,26 +1,25 @@
 #
-#Mon Jan 20 12:47:38 CET 2020
-SpecificTemplatesFolder=
-RES=
-ProjectVariable.REST_API_ROOT=/api/v1
-SRC=src/
-ROOT_PKG=org.demo
-ENTITY_PKG=org.demo.bean
-TEST_SRC=
-ProjectVariable.MAVEN_GROUP_ID=group.to.be.defined
-ProjectVariable.PROJECT_VERSION=0.1
-TEST_RES=
-ProjectVariable.REST_SERVER_PORT=3000
-SpecificDestinationFolder=
+#Fri Mar 06 10:12:43 CET 2020
 ProjectVariable.PROJECT_NAME=kairos-ui
-WEB=
-TMP=
 DOC=
-ProjectVariable.MAVEN_ARTIFACT_ID=kairos-ui
-ProjectVariable.REST_URL_ROOT=http\://localhost\:3000
-
+RES=
+ProjectVariable.MAVEN_GROUP_ID=group.to.be.defined
+ROOT_PKG=org.demo
+WEB=
+ProjectVariable.REST_API_ROOT=/api/v1
+ProjectVariable.REST_SERVER_PORT=3000
 ProjectVariable.TELOSYS_EXT_DriverClassName=org.mariadb.jdbc.Driver
-ProjectVariable.TELOSYS_EXT_DriverJarFile=D:/sts-bundle/workspace/kairos-ui/TelosysTools/lib/mariadb-java-client-2.5.3.jar
-ProjectVariable.TELOSYS_EXT_ConnectionUrl=jdbc:mysql://localhost:3306/kairosdev
+ProjectVariable.TELOSYS_EXT_DriverJarFile=D\:/sts-bundle/workspace/kairos-ui/TelosysTools/lib/mariadb-java-client-2.5.3.jar
 ProjectVariable.TELOSYS_EXT_ConnectionUser=kairos
 ProjectVariable.TELOSYS_EXT_ConnectionPassword=kairos
+ProjectVariable.TELOSYS_EXT_ConnectionUrl=jdbc\:mysql\://localhost\:3306/kairosdev
+SRC=src/
+ENTITY_PKG=org.demo.bean
+SpecificTemplatesFolder=
+ProjectVariable.MAVEN_ARTIFACT_ID=kairos-ui
+TEST_RES=
+ProjectVariable.PROJECT_VERSION=0.1
+SpecificDestinationFolder=
+TEST_SRC=
+ProjectVariable.REST_URL_ROOT=http\://localhost\:3000
+TMP=
