--- a/kairos-ui/kairos-ui/package.json
+++ b/kairos-ui/kairos-ui/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^7.2.0",
     "@angular/platform-browser-dynamic": "^7.2.0",
     "@angular/router": "^7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "@ngx-translate/core": "^11.0.1",
     "@types/underscore": "^1.9.4",
     "angular-localstorage": "^1.1.5",
