debut de migration 8

--- a/kairos-ui/kairos-ui/package.json
+++ b/kairos-ui/kairos-ui/package.json
@@ -11,25 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-mdl/core": "^6.0.1",
+    "@angular-mdl/core": "^8.0.0",
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.2.0",
+    "@angular/common": "^8.2.14",
     "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/core": "^8.2.14",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "~7.2.0",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^7.2.16",
     "@angular/material": "^7.3.7",
     "@angular/material-moment-adapter": "^7.3.7",
     "@angular/platform-browser": "^7.2.0",
     "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
+    "@angular/router": "^8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "@ngx-translate/core": "^11.0.1",
     "@types/underscore": "^1.9.4",
     "angular-localstorage": "^1.1.5",
-    "angular2-notifications": "^2.0.0",
+    "angular2-notifications": "^0.9.1",
     "angular4-hal": "^7.9.1",
     "core-js": "^2.5.4",
     "hal-4-angular": "^7.1.2",
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.8",
+    "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
