--- a/kairos-ui/kairos-ui/package.json
+++ b/kairos-ui/kairos-ui/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular-mdl/core": "^8.0.0",
     "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^7.3.7",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.14",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "^8.2.14",
@@ -35,6 +35,7 @@
     "hal-4-angular": "^7.1.2",
     "hammerjs": "^2.0.8",
     "material-design-lite": "^1.3.0",
+    "moment": "^2.18.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
