--- a/kairos-ui/kairos-ui/package.json
+++ b/kairos-ui/kairos-ui/package.json
@@ -15,43 +15,44 @@
     "@angular/animations": "^8.2.14",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.14",
-    "@angular/compiler": "~7.2.0",
+    "@angular/compiler": "^8.2.14",
     "@angular/core": "^8.2.14",
-    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "^8.2.14",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^7.3.7",
-    "@angular/material-moment-adapter": "^7.3.7",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
+    "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^8.2.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "@ngtools/webpack": "^8.3.25",
     "@ngx-translate/core": "^11.0.1",
     "@types/underscore": "^1.9.4",
     "angular-localstorage": "^1.1.5",
-    "angular2-notifications": "^0.9.1",
+    "angular2-notifications": "^0.9.9",
     "angular4-hal": "^7.9.1",
     "core-js": "^2.5.4",
     "hal-4-angular": "^7.1.2",
     "hammerjs": "^2.0.8",
     "material-design-lite": "^1.3.0",
     "moment": "^2.18.1",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
     "underscore": "^1.8.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "^8.3.25",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "angular-ide": "^0.9.71",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -62,6 +63,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "^3.5.3"
   }
 }
