--- a/kairos-ui/kairos-ui/package.json
+++ b/kairos-ui/kairos-ui/package.json
@@ -43,10 +43,10 @@
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.8.9",
     "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "~7.2.0",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -63,5 +63,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "^3.5.3"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.0.7"
   }
 }
