--- a/kairos-ui/kairos-ui/package.json
+++ b/kairos-ui/kairos-ui/package.json
@@ -11,19 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-mdl/core": "^6.0.1",
-    "@angular/animations": "^7.2.15",
+    "@angular/animations": "^7.2.16",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/compiler": "^7.2.16",
+    "@angular/core": "^7.2.16",
     "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.0",
     "@angular/http": "^7.2.16",
     "@angular/material": "^7.3.7",
     "@angular/material-moment-adapter": "^7.3.7",
     "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
+    "@angular/platform-browser-dynamic": "^7.2.16",
     "@angular/router": "^7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "@ngx-translate/core": "^11.0.1",
