--- a/kairos-ui/kairos-ui/package.json
+++ b/kairos-ui/kairos-ui/package.json
@@ -31,9 +31,9 @@
     "angular2-notifications": "^2.0.0",
     "angular4-hal": "^7.9.1",
     "core-js": "^2.5.4",
-    "hal-4-angular": "^7.1.2",
     "hammerjs": "^2.0.8",
-    "material-design-lite": "^1.3.0",
+    "primeicons": "^2.0.0",
+    "primeng": "^7.1.3",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
