--- a/kairos-ui/kairos-ui/angular.json
+++ b/kairos-ui/kairos-ui/angular.json
@@ -23,6 +23,10 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeng/resources/primeng.min.css",
+              "src/assets/sass/layout/layout.scss",
+              "src/assets/sass/theme/theme.scss",
+              "node_modules/primeicons/primeicons.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
@@ -81,6 +85,10 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "node_modules/primeng/resources/primeng.min.css",
+              "src/assets/sass/layout/layout.scss",
+              "src/assets/sass/theme/theme.scss",
+              "node_modules/primeicons/primeicons.css",            
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
@@ -134,5 +142,14 @@
       }
     }
   },
-  "defaultProject": "kairos-ui"
+  "defaultProject": "kairos-ui",
+  "schematics": {
+    "@schematics/angular:component": {
+      "prefix": "app",
+      "styleext": "scss"
+    },
+    "@schematics/angular:directive": {
+      "prefix": "app"
+    }
+  }
 }
