--- a/kairos-ui/kairos-ui/angular.json
+++ b/kairos-ui/kairos-ui/angular.json
@@ -27,6 +27,7 @@
               "src/assets/sass/layout/layout.scss",
               "src/assets/sass/theme/theme.scss",
               "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
