--- a/kairos-ui/kairos-ui/package.json
+++ b/kairos-ui/kairos-ui/package.json
@@ -32,6 +32,7 @@
     "angular4-hal": "^7.9.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "primeflex": "^1.0.0",
     "primeicons": "^2.0.0",
     "primeng": "^7.1.3",
     "rxjs": "~6.3.3",
