grosse modif : intégration des 2 composants listes dans template

--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/templates.cfg
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/templates.cfg
@@ -74,5 +74,9 @@ Entity form.component.css	; ${BEANNAME_LC}-form.component.css		; ${SRC}/app/enti
 Entity list.component.ts	; ${BEANNAME_LC}-list.component.ts		; ${SRC}/app/entities/${BEANNAME_LC}/${BEANNAME_LC}-list 	; src/app/entities/Entity_list/ENTITY-list_component_ts.vm		; *
 Entity list.component.html	; ${BEANNAME_LC}-list.component.html	; ${SRC}/app/entities/${BEANNAME_LC}/${BEANNAME_LC}-list 	; src/app/entities/Entity_list/ENTITY-list_component_html.vm	; *
 Entity list.component.css	; ${BEANNAME_LC}-list.component.css		; ${SRC}/app/entities/${BEANNAME_LC}/${BEANNAME_LC}-list 	; src/app/entities/Entity_list/ENTITY-list_component_css.vm		; *
+# Entities_listheader
+Entity listheader.component.ts	; ${BEANNAME_LC}-listheader.component.ts		; ${SRC}/app/entities/${BEANNAME_LC}/${BEANNAME_LC}-list 	; src/app/entities/Entity_list/ENTITY-listheader_component_ts.vm		; *
+Entity listheader.component.html	; ${BEANNAME_LC}-listheader.component.html	; ${SRC}/app/entities/${BEANNAME_LC}/${BEANNAME_LC}-list 	; src/app/entities/Entity_list/ENTITY-listheader_component_html.vm	; *
+Entity listheader.component.css	; ${BEANNAME_LC}-listheader.component.css		; ${SRC}/app/entities/${BEANNAME_LC}/${BEANNAME_LC}-list 	; src/app/entities/Entity_list/ENTITY-listheader_component_css.vm		; *
 # Entities_form
 test_jdbctool.gen					; test_jdbctool.gen				;  ${SRC}       	; src/test_jdbctool.vm        ; *
